--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "swagger-ui-src"]
+[submodule "swagger-ui"]
 	path = swagger-ui-src
-	url = git@github.com:wordnik/swagger-ui.git
+	url = https://github.com/swagger-api/swagger-ui.git
